--- a/cloud-commons-core/pom.xml
+++ b/cloud-commons-core/pom.xml
@@ -1,10 +1,8 @@
-<?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
          xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     
     <artifactId>cloud-commons-core</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-core</name>
@@ -13,17 +11,17 @@
     <parent>
         <groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
 
     <dependencies>
 
 		<dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-utils</artifactId> 
 		</dependency>
 		<dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-base</artifactId>
 		</dependency>
 			
