--- a/cloud-commons-file/pom.xml
+++ b/cloud-commons-file/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-commons-file</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-file</name>
@@ -12,7 +11,7 @@
     <parent>
         <groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
 
     <dependencies>
@@ -23,15 +22,15 @@
 
         <!-- cloud-commons-config -->
         <dependency>
-            <groupId>com.github.sech.commons</groupId>
+            <groupId>com.github.sech</groupId>
             <artifactId>cloud-commons-config</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.sech.commons</groupId>
+            <groupId>com.github.sech</groupId>
             <artifactId>cloud-commons-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.sech.commons</groupId>
+            <groupId>com.github.sech</groupId>
             <artifactId>cloud-commons-rabbitmq</artifactId>
         </dependency>
 
