--- a/cloud-commons-pay/pom.xml
+++ b/cloud-commons-pay/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-commons-pay</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-pay</name>
@@ -12,13 +11,13 @@
     <parent>
     	<groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
 
 	<dependencies>
 		
 		<dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-utils</artifactId>
 		</dependency>
 			
