--- a/cloud-commons-redis/pom.xml
+++ b/cloud-commons-redis/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-commons-redis</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-redis</name>
@@ -12,19 +11,19 @@
     <parent>
         <groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
 
     <dependencies>
     	<!-- cloud-commons-core -->
         <dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-core</artifactId>
         </dependency>
 		
 		<!-- cloud-commons-config -->
         <dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-config</artifactId>
         </dependency>
 		
