--- a/cloud-commons-swagger/pom.xml
+++ b/cloud-commons-swagger/pom.xml
@@ -4,7 +4,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-commons-swagger</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-swagger</name>
@@ -13,13 +12,13 @@
     <parent>
         <groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
 
     <dependencies>		
 		<!-- cloud-commons-config -->
         <dependency>
-			<groupId>com.github.sech.commons</groupId>
+			<groupId>com.github.sech</groupId>
 			<artifactId>cloud-commons-config</artifactId>
         </dependency>
 		
