--- a/cloud-commons-utils/pom.xml
+++ b/cloud-commons-utils/pom.xml
@@ -3,7 +3,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-commons-utils</artifactId>
-    <groupId>com.github.sech.commons</groupId>
     <packaging>jar</packaging>
 
     <name>cloud-commons-utils</name>
@@ -12,7 +11,7 @@
     <parent>
     	<groupId>com.github.sech</groupId>
         <artifactId>cloud-commons</artifactId>
-        <version>${cloud-commons.version}</version>
+        <version>${cloud.commons.version}</version>
     </parent>
     
     <dependencies>
